@@ -262,4 +262,11 @@ extern RegionPtr CreateBoundingShape(
 extern RegionPtr CreateClipShape(
     WindowPtr /* pWin */ );
 
+extern void DisableMapUnmapEvents(
+    WindowPtr /* pWin */ );
+extern void EnableMapUnmapEvents(
+    WindowPtr /* pWin */ );
+extern Bool MapUnmapEventsEnabled(
+    WindowPtr /* pWin */ );
+
 #endif /* WINDOW_H */
